syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Safir.Agent.Protos";

service FileSystem {
  rpc ListFiles(google.protobuf.Empty) returns (stream FileSystemEntry) {
    option (google.api.http) = {
      get: "/v1/files"
    };
  }
}

message FileSystemEntry {
  string path = 1;
}
